; ModuleID = '/home/carl/AnghaBench/git/extr_bisect.c_compare_commit_dist.c'
source_filename = "/home/carl/AnghaBench/git/extr_bisect.c_compare_commit_dist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit_dist = type { i64, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @compare_commit_dist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compare_commit_dist(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.commit_dist*, align 8
  %7 = alloca %struct.commit_dist*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.commit_dist*
  store %struct.commit_dist* %9, %struct.commit_dist** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.commit_dist*
  store %struct.commit_dist* %11, %struct.commit_dist** %7, align 8
  %12 = load %struct.commit_dist*, %struct.commit_dist** %6, align 8
  %13 = getelementptr inbounds %struct.commit_dist, %struct.commit_dist* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.commit_dist*, %struct.commit_dist** %7, align 8
  %16 = getelementptr inbounds %struct.commit_dist, %struct.commit_dist* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %14, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %2
  %20 = load %struct.commit_dist*, %struct.commit_dist** %7, align 8
  %21 = getelementptr inbounds %struct.commit_dist, %struct.commit_dist* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load %struct.commit_dist*, %struct.commit_dist** %6, align 8
  %24 = getelementptr inbounds %struct.commit_dist, %struct.commit_dist* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = sub nsw i64 %22, %25
  %27 = trunc i64 %26 to i32
  store i32 %27, i32* %3, align 4
  br label %40

28:                                               ; preds = %2
  %29 = load %struct.commit_dist*, %struct.commit_dist** %6, align 8
  %30 = getelementptr inbounds %struct.commit_dist, %struct.commit_dist* %29, i32 0, i32 1
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load %struct.commit_dist*, %struct.commit_dist** %7, align 8
  %35 = getelementptr inbounds %struct.commit_dist, %struct.commit_dist* %34, i32 0, i32 1
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 0
  %39 = call i32 @oidcmp(i32* %33, i32* %38)
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %28, %19
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @oidcmp(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
